Added open/closed logic

--- a/app/assets/stylesheets/business_show_page.scss
+++ b/app/assets/stylesheets/business_show_page.scss
@@ -255,6 +255,18 @@
     padding-bottom: 5px;
 }
 
+#open-now {
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(2,161,109,1);
+}
+
+#closed {
+    font-size: 16px;
+    font-weight: 600;
+    color: rgba(224,7,7,1);
+}
+
 .biz-show-address {
     color: rgba(2,122,151,1);
     font-size: 14px;
