Refactored Search to Backend

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -34,3 +34,17 @@
     font-weight: 400;
     padding: 3px;
 }
+
+.search-index-map-container {
+    position: sticky;
+    top: 130px;
+    margin-top: -70px;
+    min-width: 310px;
+    width: 310px;
+    height: 110vh;
+    margin-bottom: 18px;
+    margin-left: -400px;
+}
+
+// .biz-index-item-wrapper {
+// }
