Update rating/review state

--- a/app/assets/stylesheets/review_index_item.scss
+++ b/app/assets/stylesheets/review_index_item.scss
@@ -70,6 +70,7 @@
     color: rgba(110,112,114,1);
     font-size: 14px;
     font-weight: 400;
+    padding-left: 5px;
 }
 
 .review-item-body-container {
