--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
       window.thaiPhoto = "<%= image_url('farmhouse2.jpg') %>";
       window.mexicanPhoto = "<%= image_url('gordo3.jpg') %>";
       window.japanesePhoto = "<%= image_url('kansai.jpg') %>";
+      window.signupPic = "<%= image_url('smackin_signup_pic.png') %>";
 
       window.izzaHot = "<%= image_url('izzahot.jpg') %>";
       window.jonggaHot = "<%= image_url('jonggahot.jpg') %>";
