--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -1,17 +1,31 @@
-.signup-login-form {
+.login {
+    max-width: 100%;
+}
+
+.login-form {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
 }
 
-.form {
-    width: 50%;
+.login-form-image-wrapper {
+    display: flex;
+    width: 80%
 }
 
-.session-form-header {
+.login-form-pic {
+    height: 330px;
+    width: 330px;
+    object-fit: cover;
+    margin-top: 190px;
+}
+
+.form-login {
+    width: 70%;
+}
+
+.login-form-header {
     display: flex;
-    // position: absolute;
     justify-content: center;
     background-color: #d32323;
     height: 34px;
@@ -19,17 +33,17 @@
     padding: 12px 0;
 }
 
-.session-form-header-link {
+.login-form-header-link {
     display: flex;
     text-decoration: none;
     color: white;
     font-size: 24px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
-    
+
 }
 
-.session-form-header-logo {
+.login-form-header-logo {
     text-decoration: none;
     color: white;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -77,11 +91,11 @@
     padding-top: 10px;
 }
 
-.switch-form-link:hover{
+.switch-form-link:hover {
     text-decoration: underline;
 }
 
-.terms {
+.terms-login {
     display: flex;
     justify-content: center;
     color: #333;
@@ -120,7 +134,7 @@
     border-color: white;
 }
 
-.session-form-divider {
+.login-form-divider {
     display: flex;
     justify-content: center;
     color: #666;
@@ -157,18 +171,18 @@
     border: 1px solid #d32323;
     border-radius: 4px;
     margin-top: 10px;
-}   
+}
 
 .signup-login-submit:hover {
     opacity: 0.88;
     transition: all 0.6s;
 }
 
-.switch-form-text-2 {
+.switch-form-login {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 12px;
     color: #999;
-    margin-left: 47%;
+    margin-left: 54%;
     padding-top: 10px;
 }
 
@@ -178,138 +192,43 @@
     padding-left: 5px;
 }
 
-.switch-form-2:hover {
-    text-decoration: underline;
-}
-
-.signup-subtitle {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    color: #333;
-    position: absolute;
-    padding-top: 15px;
-}
-
-.terms-2 {
-    position: relative;
-    padding-top: 45px;
-    color: #333;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 12px;
-    margin-bottom: 15px;
-    width: 52%;
-    margin-left: 0%;
-    text-align: center;
-    line-height: 1.5em;
-}
-
-.first-name-input {
-    margin-left: 25%;
-    width: 23%;
-    padding-left: 5px;
-    height: 28px;
-    background-color: white;
-    border: 1px solid #ccc;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    border-radius: 4px;
-    padding-left: 8px;
-    margin-bottom: 10px;
-}
-
-.last-name-input {
-    width: 23%;
-    padding-left: 5px;
-    margin-left: 4px;
-    height: 28px;
-    background-color: white;
-    border: 1px solid #ccc;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    border-radius: 4px;
-    padding-left: 8px;
-}
-
-.signup-input {
+.login-no-errors {
     display: flex;
-    justify-content: center;
-    width: 49%;
-    margin-left: 25%;
-    padding-left: 5px;
-    height: 28px;
-    background-color: white;
-    border: 1px solid #ccc;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    border-radius: 4px;
-    margin-bottom: -3px;
-}
-
-.switch-form {
-    text-decoration: none;
-    color: #0073bb;
-    padding-left: 5px;
-}
-
-.switch-form:hover {
-    text-decoration: underline;
-}
-
-.switch-form-text {
-    display: flex;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 12px;
-    color: #999;
-    margin-left: 48%;
-    padding-top: 10px;
+    flex-direction: column;
+    margin-bottom: -65px;
+    width: 94%;
 }
 
 .login-errors-container {
-    position: relative;
-    margin-top: -500px;
-    width: 90%;
-    margin-left: 70px;
-    height: 60px;
-}
-
-
-.signup-errors-container {
     display: flex;
-    // justify-content: center;
-    // position: relative;
-    // margin-top: -580px;
-    width: 90%;
-    // margin-left: 70px;
+    flex-direction: column;
+    margin-bottom: -125px;
+    width: 94%;
 }
 
-.error-row {
+.login-error-row {
     display: flex;
-}
-
-
-.session-form-error {
+    justify-content: space-between;
+    width: 100%;
     background-color: #fcd6d3;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    padding: 15px 0 15px 30px;
+    padding: 13px 10px 1px 10px;
+    margin-bottom: 3px;
     border-radius: 3px;
+}
+
+
+.login-form-error {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
     font-size: 16px;
-    top: 10%;
     line-height: 1.5em;
-    width: 98%;
 }
 
-
-
-.session-errors-x {
-    // position: absolute;
-    // margin-left: 1173px;
-    // margin-top: -45px;
+.login-errors-x {
     font-size: 36px;
     color: #666;
 }
 
-.session-errors-x:hover {
+.login-errors-x:hover {
     cursor: pointer;
 }
