user profile styling started

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
       window.mexicanPhoto = "<%= image_url('gordo3.jpg') %>";
       window.japanesePhoto = "<%= image_url('kansai.jpg') %>";
       window.signupPic = "<%= image_url('smackin_signup_pic.png') %>";
+      window.userLargeSquare = "<%= image_url('user_large_square.png') %>";
 
       window.izzaHot = "<%= image_url('izzahot.jpg') %>";
       window.jonggaHot = "<%= image_url('jonggahot.jpg') %>";
