--- a/app/assets/stylesheets/user_profile_reviews.scss
+++ b/app/assets/stylesheets/user_profile_reviews.scss
@@ -4,11 +4,12 @@
 
 .user-profile-background {
     display: flex;
-    justify-content: space-around;
+    // justify-content: space-around;
     background: #f5f5f5;
     border-bottom: 1px solid #e6e6e6;
     height: 180px;
     margin-top: -32px;
+    padding-left: 100px;
 }
 
 .user-profile-pic-container {
@@ -18,12 +19,16 @@
 .user-profile-pic {
     border: solid 1px #cccccc;
     border-radius: 5px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
 
 .user-profile-middle-container {
     margin-top: 65px;
-    margin-left: -310px;
+    // margin-left: -310px;
     color: #333;
+    padding-left: 20px;
 }
 
 .user-profile-title-name {
@@ -79,13 +84,17 @@
 
 .user-profile-reviews-container {
     margin-top: 25px;
-    margin-left: 460px;
+    margin-left: 321px;
     display: flex;
+}
+
+.user-reviews-middle-container {
+    width: 385px;
 }
 
 .reviews-title {
     font-weight: bold;
-    margin-bottom: 6px;
+    margin-bottom: 12px;
     font-size: 21px;
     line-height: 1.28571em;
     color: #d32323;
@@ -94,6 +103,10 @@
 .user-profile-sort-container {
     display: flex;
     color: #666;
+    width: 600px;
+    margin-bottom: 25px;
+    padding-bottom: 7px;
+    border-bottom: solid 1px #e6e6e6;
 }
 
 .user-reviews-right-container {
@@ -111,13 +124,21 @@
     color: #d32323;
 }
 
-.sort-by-date {
-    padding-right: 30px;
-
+.sort-by-subtitle {
+    font-size: 14px;
+    color: #666;
+    padding-top: 2px;
 }
 
-.sort-by-category {
+.sort-by-label {
+    border: 0px;
+    outline: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #666;
+}
 
+.category-label {
 }
 
 .about-user-rating-distribution-row {
