fix some images

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -214,6 +214,7 @@
     margin-top: 3px;
     object-fit: cover;
     border-radius: 4px;
+    image-rendering:auto;
 }
 
 .biz-index-item-inner-container {
