--- a/app/assets/stylesheets/review_index_item.scss
+++ b/app/assets/stylesheets/review_index_item.scss
@@ -46,6 +46,7 @@
     margin-top: -2px;
     margin-right: 5px;
     margin-left: 1px;
+    image-rendering: pixelated;
 }
 
 .review-item-rating-5 {
