--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -185,16 +185,17 @@
     margin-left: 10px;
 }
 
+.biz-index-item-wrapper{
+    width: 800px;
+}
+
 .biz-index-item{
     display: block;
     font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
     text-decoration: none;
     border: 1px solid #ebebeb;
     border-radius: 4px;
-    width: 50%;
     height: 240px;
-    min-width: 680px;
-    max-width: 800px;
     margin: 15px 35px;
     padding: 24px;
 }
