--- a/app/assets/stylesheets/signup_form.scss
+++ b/app/assets/stylesheets/signup_form.scss
@@ -40,7 +40,7 @@
     font-size: 24px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
-
+    z-index: 1000;
 }
 
 .signup-form-header-logo {
@@ -206,7 +206,7 @@
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 12px;
     color: #999;
-    margin-left: 53%;
+    margin-left: 414px;
     padding-top: 10px;
 }
 
