Fix search index styling

--- a/app/assets/stylesheets/business_index.scss
+++ b/app/assets/stylesheets/business_index.scss
@@ -15,6 +15,12 @@
     height: 100px;
 }
 
+.search-index-all-businesses-link {
+    position: absolute;
+    margin-left: 241px;
+    color: #2d2e2f;
+}
+
 .biz-index-back-to-homepage {
     display: flex;
     margin-left: -20px;
